--- a/supervisord.conf
+++ b/supervisord.conf
@@ -35,3 +35,8 @@ files = /etc/supervisor/conf.d/*.conf
 [program:nginx]
 redirect_stderr=true
 command=/usr/sbin/nginx -c /nginx/config/nginx.conf
+
+[program:php5-fpm]
+redirect_stderr=true
+command=/usr/sbin/php5-fpm
+
